--- a/tcc/capitulos/introducao.tex
+++ b/tcc/capitulos/introducao.tex
@@ -3,7 +3,7 @@
 A linguagem é a forma com que nós nos comunicamos, seja ela escrita ou
 falada. De fato, a linguagem é a forma como
 expressamos nossas idéias, sentimentos e experiências. O Processamento de
-Linguagem Natural, é o termo que é utilizado para descrever um software ou
+Linguagem Natural é o termo que é utilizado para descrever um software ou
 componente de hardware que tem como função analisar a linguagem escrita ou falada
 \cite{jacksonmoulinier2007}.
 
@@ -42,7 +42,7 @@ notícias de todo o mundo são reportados no \textit{website}, como exemplo,
 pode-se citar as eleições ocorridas no ano de 2016 nos Estados Unidos e o
 tiroteio ocorrido em Paris em 15 de Novembro de 2015.
 
-Dentro deste contexto neste trabalho será desenvolvido um software que permita
+Dentro deste contexto, neste trabalho será desenvolvido um software que permita
 realizar a análise de comentários do \textit{website} Reddit. Mais
 especificamente, os comentários do Reddit serão analisados com o objetivo de
 identificar padrões de sentimentos dos usuários, ou seja, determinar se a
