--- a/tcc/tcc.bib
+++ b/tcc/tcc.bib
@@ -351,4 +351,41 @@ author = {Pålsson, A., and Szerszen, D.},
  source = {http://www.ncstrl.org:8900/ncstrl/servlet/search?formname=detail\&id=oai%3Ancstrlh%3Aercim_cwi%3Aercim.cwi%2F%2FCS-R9525},
  publisher = {CWI (Centre for Mathematics and Computer Science)},
  address = {Amsterdam, The Netherlands, The Netherlands},
+}  
+
+@inproceedings{DBLP:conf/lrec/StranisciBFP16,
+  author    = {Marco Stranisci and
+               Cristina Bosco and
+               Delia Iraz{\'{u}} Hern{\'{a}}ndez Far{\'{\i}}as and
+               Viviana Patti},
+  title     = {Annotating Sentiment and Irony in the Online Italian Political Debate
+               on {\#}labuonascuola},
+  booktitle = {Proceedings of the Tenth International Conference on Language Resources
+               and Evaluation {LREC} 2016, Portoro{\v{z}}, Slovenia, May 23-28, 2016.},
+  year      = {2016},
+  crossref  = {DBLP:conf/lrec/2016},
+  url       = {http://www.lrec-conf.org/proceedings/lrec2016/summaries/1063.html},
+  timestamp = {Tue, 30 Aug 2016 18:49:47 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/lrec/StranisciBFP16},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+
+@article{Qiu:2011:OWE:1970420.1970422,
+ author = {Qiu, Guang and Liu, Bing and Bu, Jiajun and Chen, Chun},
+ title = {Opinion Word Expansion and Target Extraction Through Double Propagation},
+ journal = {Comput. Linguist.},
+ issue_date = {March 2011},
+ volume = {37},
+ number = {1},
+ month = mar,
+ year = {2011},
+ issn = {0891-2017},
+ pages = {9--27},
+ numpages = {19},
+ url = {http://dx.doi.org/10.1162/coli_a_00034},
+ doi = {10.1162/coli_a_00034},
+ acmid = {1970422},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
 } 
