--- a/tcc/tcc.tex
+++ b/tcc/tcc.tex
@@ -240,6 +240,7 @@ Informação da Universidade de Caxias do Sul, como requisito obrigatório para 
 \include{capitulos/introducao}
 \include{capitulos/capitulo1}
 \include{capitulos/capitulo3}
+\include{capitulos/capitulo5}
 
 % ----------------------------------------------------------
 % RESULTADOS
